--- a/website/index.html
+++ b/website/index.html
@@ -6,8 +6,8 @@
             Template
         </title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="template.css">
-        <script src="template.js">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js">
 </script>
     </head>
     <body id="body" onload="init();">
@@ -21,7 +21,7 @@
                     <a href="#" class="nav_a">Services</a>
                 </li>
                 <li class="nav_li">
-                    <a href="#" class="nav_a">Contact</a>
+                    <a href="../blog" class="nav_a">Blog</a>
                 </li>
             </ul>
         </nav>
