--- a/website/index.html
+++ b/website/index.html
@@ -25,9 +25,7 @@
                 </li>
             </ul>
         </nav>
-
         <div id="content">
-            <div id="content_text">
                 <span id="introduction1">HELLO, I AM</span>
                 <br>
                 <span id="introduction2">PETER </span>
@@ -48,8 +46,8 @@
                 <p id="introduction_text">
                     I am an EDI expert. További bemutatkozó szöveg. Proin ac mi neque. Proin ac mi neque. Suspendisse potenti. Ut dapibus id nulla sit amet sodales. Duis condimentum rutrum lacus sit amet vestibulum. Cras ultrices nunc at varius scelerisque. Mauris quis justo sit amet purus rutrum eleifend. In at elit scelerisque, dignissim justo et, tempus lectus. Sed luctus mi id pharetra iaculis. Morbi sit amet libero convallis, consequat orci nec, rhoncus dui. Donec nec nisi rhoncus, viverra mauris at, lacinia eros. Proin mi est, iaculis non ultricies eget, aliquet vel est. Fusce porttitor massa nec neque bibendum, ac rutrum justo gravida. Proin ut tempus purus. Fusce felis elit, faucibus vel nisl ut, hendrerit placerat tortor. Donec lobortis sem in condimentum eleifend. Vestibulum et nulla viverra, malesuada est et, tempus sapien. Suspendisse hendrerit tortor non risus sollicitudin consectetur. Quisque interdum eget nibh sit amet cursus. Curabitur volutpat odio sed ante sodales interdum. Quisque ipsum elit, sagittis non mauris quis, blandit aliquet nulla. Aenean leo metus, pellentesque sed posuere a, varius feugiat dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec quis urna neque. Sed nunc nulla, mollis et justo at, interdum adipiscing quam. Pellentesque viverra erat augue, dapibus consequat neque porta quis. Duis at erat in felis molestie sodales eu at risus. Sed tempor magna ac tempor faucibus. Maecenas vitae placerat enim.
                 </p>
-            </div>
-            <span id="footer">© 2013 - Made by Gergály Benedek</span>
+
+            <span id="footer">© 2013-2014 Made by Gergály Benedek</span>
         </div>
         <div id="wrap"></div>
     </body>
